generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  DOCTOR
  PATIENT
  ADMIN
  RESEARCHER
}

enum CaseScope {
  HOSPITAL
  PATIENT
}

enum CaseStatus {
  PENDING
  VALIDATED
  DISPUTED
}

enum FeedbackType {
  VALIDATE
  DISPUTE
}

enum FLStrategy {
  FEDAVG
  FEDSCRT
}

enum FLTrigger {
  DOCTOR_UPLOAD
  DISPUTE
  SCHEDULED
}

enum PrivacyEvent {
  WEIGHTS_SENT
  ROUND_COMPLETE
  DISPUTE_SIGNAL
}

enum ChatRole {
  USER
  ASSISTANT
}

model Hospital {
  id          String   @id @default(cuid())
  flClientId  String   @unique
  displayName String
  totalCases  Int      @default(0)
  createdAt   DateTime @default(now())

  users           User[]
  cases           Case[]
  flContributions FlContribution[]
  privacyLogs     PrivacyAuditLog[]
}

model User {
  id               String    @id @default(cuid())
  email            String    @unique
  passwordHash     String
  name             String
  role             Role
  hospitalId       String?
  hospital         Hospital? @relation(fields: [hospitalId], references: [id])
  onboardingDone   Boolean   @default(false)
  casesContributed Int       @default(0)
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt

  cases        Case[]
  feedbacks    Feedback[]
  chatMessages ChatMessage[]

  @@index([hospitalId])
}

model Case {
  id               String     @id @default(cuid())
  userId           String
  user             User       @relation(fields: [userId], references: [id])
  hospitalId       String?
  hospital         Hospital?  @relation(fields: [hospitalId], references: [id])
  scope            CaseScope
  imagePath        String
  storedLocally    Boolean    @default(true)
  predictedSubtype String
  confidence       Float
  probs            Json
  attentionMap     Json?
  modelVersion     Int        @default(1)
  status           CaseStatus @default(PENDING)
  flRoundId        String?
  flRound          FlRound?   @relation(fields: [flRoundId], references: [id])
  createdAt        DateTime   @default(now())

  feedbacks    Feedback[]
  chatMessages ChatMessage[]

  @@index([hospitalId])
  @@index([userId])
  @@index([scope])
}

model FlRound {
  id              String     @id @default(cuid())
  roundNumber     Int
  strategy        FLStrategy
  participants    Json
  globalF1Before  Float
  globalF1After   Float
  f1PerClassAfter Json
  durationSeconds Int
  modelVersion    Int
  triggeredBy     FLTrigger
  createdAt       DateTime   @default(now())

  cases         Case[]
  contributions FlContribution[]
  privacyLogs   PrivacyAuditLog[]
}

model FlContribution {
  id               String   @id @default(cuid())
  flRoundId        String
  flRound          FlRound  @relation(fields: [flRoundId], references: [id])
  hospitalId       String
  hospital         Hospital @relation(fields: [hospitalId], references: [id])
  localEpochs      Int
  samplesUsed      Int
  localF1Before    Float
  localF1After     Float
  weightDeltaNorm  Float
  privacyBudgetUsed Float   @default(0.1)
  createdAt        DateTime @default(now())

  @@index([hospitalId])
  @@index([flRoundId])
}

model PrivacyAuditLog {
  id                 String       @id @default(cuid())
  hospitalId         String
  hospital           Hospital     @relation(fields: [hospitalId], references: [id])
  flRoundId          String?
  flRound            FlRound?     @relation(fields: [flRoundId], references: [id])
  eventType          PrivacyEvent
  bytesTransmitted   Int
  rawDataTransmitted Int          @default(0)
  createdAt          DateTime     @default(now())

  @@index([hospitalId])
}

model Feedback {
  id               String       @id @default(cuid())
  caseId           String
  case             Case         @relation(fields: [caseId], references: [id])
  doctorId         String
  doctor           User         @relation(fields: [doctorId], references: [id])
  feedbackType     FeedbackType
  correctedSubtype String?
  evidenceTypes    Json
  justification    String?
  alTriggered      Boolean      @default(false)
  newModelVersion  Int?
  createdAt        DateTime     @default(now())
}

model ChatMessage {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id])
  caseId    String?
  case      Case?    @relation(fields: [caseId], references: [id])
  role      ChatRole
  content   String
  createdAt DateTime @default(now())

  @@index([userId])
}

model ModelMetrics {
  id           String   @id @default(cuid())
  modelVersion Int      @unique
  flRound      Int
  accuracy     Float
  f1Macro      Float
  f1PerClass   Json
  strategy     String
  createdAt    DateTime @default(now())
}
